# newxos

./: .gitignore  .handoff.json  AGENTS.md  flake.nix  opencode.json  stylua.toml
.github/workflows/: ci.yml
configs/hypr/: animations.lua  hyprland.lua  keybinds.lua
configs/nvim/: .luarc.json  init.lua  nvim-pack-lock.json
configs/open-webui/: comfyui-workflow.json
configs/opencode/: README.md
configs/quickshell/: .qmlls.ini  shell.qml
docs/: agent-index.md  architecture.md  pitfalls.md
docs/adr/: 0001-use-basic-memory.md  0002-markdown-only-git-history.md  0003-local-disposable-memory-index.md  0004-knowledge-as-index.md
docs/audits/: newshell-state-singletons.md  quickshell-state-singletons.md
docs/contracts/: handoff-config.md  hyprland-keymap.md  launcher-policy-decisions.md  quickshell-design.md
knowledge/: AGENT_RULES.md  ENCOUNTERED-PROBLEMS.md  FOUNDATIONS.md  README.md  REFERENCES.md  encountered_issues.md  flake-structure.md  schema.md  tags.md  workflow.md
modules/: README.md  audio.nix  installer-media.nix  installer-staging.nix  locales.nix  networking.nix  newxos.nix  nix.nix  opencode.nix  security.nix  templates.nix  tooling-inputs.nix  workflow.nix
modules/dev/: git.nix  (+6 more)
secrets/: github_id.pub  nordvpn_token
tools/handoff/: Cargo.toml
tools/handoff/src/: cli.rs  config.rs  discovery.rs  error.rs  expectation.rs  git.rs  main.rs  matcher.rs  planner.rs  report.rs  runner.rs  tree.rs
tools/launcher-test/: Cargo.toml
tools/launcher-test/src/: assertions.rs  cli.rs  ipc.rs  main.rs  pretty.rs  probe.rs  runner.rs  schema.rs
(+622 files in other folders)
