[package]
name = "repo-handoff"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "repo-handoff"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
globset = "0.4"
indexmap = { version = "2", features = ["serde"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
